frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.event-div {
  margin-top: 25px;
  margin-bottom: 25px;
  text-align: center;
  align-items: center;
}

.event-card {
  margin-top: 25px;
  margin-bottom: 25px;
}

.event-image {
  font-size: xxx-large;
}

.photo-div {
  margin-top: 25px;
  margin-bottom: 25px;
  text-align: center;
  align-items: center;
}

.photo-div h2 {
  margin-bottom: 25px;
}

.photo {
  width: 100%;
  aspect-ratio: 1/1;
}

.photo-buttons {
  padding-top: 25px;
  padding-bottom: 25px;
}

.header {
  position: fixed !important;
  width: 100%;
}

.divider:after,
.divider:before {
  content: "";
  flex: 1;
  height: 1px;
  background: #eee;
}

.google-btn:focus,
.google-btn:hover {
  background-color: #4285f4;
  color: white;
  opacity: 1;
}
.fb-btn:focus,
.fb-btn:hover {
  background-color: #3b5998;
  color: white;
  opacity: 1;
}

.signup-btn:focus,
.signup-btn:hover {
  opacity: 1;
}

.fb-btn {
  background-color: #3b5998;
  color: white;
  margin-bottom: 13px;
}

.google-btn {
  background-color: #4285f4;
  color: white;
  margin-bottom: 13px;
}

.social-btn {
  width: 100%;
  justify-content: center;
  padding: 0px;
  border: none;
  border-radius: 4px;
  margin: 5px 0;
  opacity: 0.85;
  display: inline-block;
  font-size: 17px;
  line-height: 20px;
  text-decoration: none;
  position: relative;
}

.social-btn img {
  left: 8px;
  position: absolute;
  background-color: white;
}

.signup-btn {
  background-color: #572afb;
  border-color: #572afb;
  color: white;
}

.forgotPassword {
  background-color: transparent;
  color: #0d6efd;
  text-decoration: underline;
  border-color: transparent;
}

.user-email-tag {
  font-size: 18px;
  margin-bottom: 0rem;
}

.user-email-display {
  font-size: 16px;
  color: #6b6b83;
}

.user-displayname-tag {
  font-size: 18px;
  margin-bottom: 0rem;
}

.user-displayname-display {
  font-size: 16px;
  color: #6b6b83;
}

.wedding-label {
  font-size: 24px;
  margin-bottom: 0rem;
  color: black;
}
.wedding-display {
  font-size: 22px;
  color: #6b6b83;
}

.vertical-spacing {
  margin-right: 30px;
}

.profile-page {
  background-color: lightgray;
  padding-top: 20px;
  padding-bottom: 40px;
}

.gift-div {
  margin-top: 25px;
  margin-bottom: 25px;
  text-align: center;
  align-items: center;
}

#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

.homepage {
  padding-left: 20px;
}

.homepage-content {
  padding-left: 100px;
  padding-right: 100px;
}

.notfound-info {
  margin-top: 8vh;
}

.forbidden-div {
  margin-top: 8vh;
  text-align: center;
}

.error-div {
  margin-top: 8vh;
  text-align: center;
}

.edit-delete.col {
  max-width: fit-content;
}

